# wasmbenchpaper

./: .gitignore  README.md  profiler.sh
charts/: .gitignore  README.md  create_charts.py  perf_data.json  requirements.txt
polyglotwasmbench/: Dockerfile.buildstage  Dockerfile.sdk-wrapper-c-copyfile  Dockerfile.sdk-wrapper-c-sort  Dockerfile.sdk-wrapper-go-copyfile  Dockerfile.sdk-wrapper-go-sort  Dockerfile.sdk-wrapper-py-copyfile  Dockerfile.sdk-wrapper-py-sort  Dockerfile.sdk-wrapper-rust-copyfile  Dockerfile.sdk-wrapper-rust-echoserver  Dockerfile.sdk-wrapper-rust-httpserver  Dockerfile.sdk-wrapper-rust-sort  Dockerfile.wasm-c-copyfile  Dockerfile.wasm-c-sort  Dockerfile.wasm-go-copyfile  Dockerfile.wasm-go-sort  Dockerfile.wasm-rust-copyfile  Dockerfile.wasm-rust-httpserver  Dockerfile.wasm-rust-sort  Dockerfile.wasm_library  Dockerfile.wrapper_library  Makefile  README.md
polyglotwasmbench/file-server/rust/native/: Cargo.toml  Makefile  README.md
polyglotwasmbench/file-server/rust/native/public/: index.html  main.css
polyglotwasmbench/file-server/rust/native/src/echo/: main.rs
polyglotwasmbench/file-server/rust/native/src/http/: main.rs
polyglotwasmbench/sdk-wrappers/rust/wasmedge/cli-based-input/: Cargo.toml
polyglotwasmbench/sdk-wrappers/rust/wasmedge/cli-based-input/src/: main.rs
polyglotwasmbench/simd/mandelbrot/rust/: Cargo.toml  Makefile  README.md
polyglotwasmbench/simd/mandelbrot/rust/src/no-simd/: main.rs
polyglotwasmbench/simd/mandelbrot/rust/src/no-simd-bitmap/: main.rs
polyglotwasmbench/simd/mandelbrot/rust/src/simd/: main.rs
polyglotwasmbench/simd/mandelbrot/rust/src/simd-bitmap/: main.rs
polyglotwasmbench/sort/: Dockerfile
polyglotwasmbench/sudoku/: README.md  scraper.py
(+187 files in other folders)
