[package]
name = "wasi-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
env_logger = { version = "0.9.0", default-features = false }
mio = { version = "0.8.2", features=[ "os-poll", "net" ] }
tokio = { version = "1.24.2", default-features = false, features = ["net", "rt", "macros", "io-util", "io-std"] }
libc = "0.2.139"

[[bin]]
name = "wasi-server-echo"
path = "src/echo/main.rs"

[[bin]]
name = "wasi-server-http"
path = "src/http/main.rs"
