[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mandelbrot-no-simd"
path = "src/no-simd/main.rs"

[[bin]]
name = "mandelbrot-simd"
path = "src/simd/main.rs"

[[bin]]
name = "mandelbrot-no-simd-bitmap"
path = "src/no-simd-bitmap/main.rs"

[[bin]]
name = "mandelbrot-simd-bitmap"
path = "src/simd-bitmap/main.rs"

[dependencies]
